# fastapi_todos

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  prometheus.yml  pyproject.toml  run.py
.junie/: guidelines.md
alembic/: env.py
alembic/versions/: 20251019_000001_init.py  20251019_000002_add_todo_created_at_status.py  20251021_000003_add_user_id_to_auth_tokens.py  20251021_000004_create_users_table.py  20251021_000005_add_user_id_to_todos.py
app/: main.py
app/api/v1/: auth.py  todos.py
app/middlewares/: __init__.py  error_handling.py  logging_middleware.py  metrics_middleware.py  process_time_header.py
app/models/: RequestsTodos.py  ResponseTodos.py
app/repositories/: todo_repository.py
app/services/: __init__.py  todo_service.py
app/shared/: LoggerSingleton.py  auth.py  cache_redis.py  celery_app.py  config.py  db.py  jwt_utils.py  messages.py  metrics.py  rate_limiter.py  redis_settings.py  security.py
app/tasks/: todo_tasks.py
docs/: LOGGING.md
grafana/provisioning/dashboards/: dashboards.yaml  fastapi_todos_overview.json
grafana/provisioning/datasources/: datasource.yaml
scripts/: toggle-precommit.sh
sql/: init_postgres.sql
tests/: conftest.py  test_auth_login.py  test_first_user_admin.py  test_healthcheck.py  test_rbac_todos.py  test_refresh_token.py  test_repro_register_login.py  test_todos_celery_integration.py  test_todos_celery_unit.py  test_todos_pagination_integration.py  test_todos_pagination_unit.py  test_todos_unit.py
