[project]
name = "fastapi-todos"
version = "0.1.0"
description = "Endpoints Todos in fastapi"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "aiomysql>=0.2.0",
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.13.3",
    "fastapi[all]>=0.119.0",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.1",
    "rich>=14.2.0",
    "slowapi>=0.1.9",
    "uvicorn[standard]>=0.38.0",
    "secure>=0.3.0",
    "redis>=5.0.0",
    "celery>=5.4,<6",
    "fastapi-mcp>=0.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = [
    "-q",
    "--cov=app",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=xml",
    "--cov-report=html",
]
testpaths = ["tests"]
